# pytest-flask-example

./: .gitignore  README.md  app.py  config.py  factory.py  pyproject.toml
Register/: register_blueprint.py  register_db.py
applications/: foo.py  login.py  mockdb.py  mockfolder.py
tests/: conftest.py  test_example.py
